// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkCalendarScrollable should render correctly 1`] = `
<div
  className="bpk-calendar-scrollable"
>
  I am an example component.
</div>
`;

exports[`BpkCalendarScrollable should support arbitrary props 1`] = `
<div
  className="bpk-calendar-scrollable"
  testID="123"
>
  I am an example component.
</div>
`;

exports[`BpkCalendarScrollable should support custom class names 1`] = `
<div
  className="bpk-calendar-scrollable custom-classname"
>
  I am an example component.
</div>
`;
